--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <a href="guidelines.html">GUIDELINES</a>
     <a href="About.html">ABOUT</a>
   </div>
-  </body>
   <div class="container">
     <div class="row">
       <div id="demo"class="col-lg-8 col-mg-6 col-sm-12">
@@ -33,6 +32,10 @@
       </div>
     </div>
   </div>
+  <div class="foot">
+    <p style="color:white; opacity:0.4 ;text-align:center">Developed By Tanishq Soni & Sachin Lodhi</p>
+  </div>
+</body>
   <script type="text/javascript">
   var deadline = new Date("Sept 27, 2019 11:00:00").getTime();
   var x = setInterval(function() {
