--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="contactus.html">CONTACT US</a>
     <a href="adept.html">ADEPT'18</a>
     <a href="guidelines.html">GUIDELINES</a>
-    <a href="About.html">ABOUT</a>
+    <a href="about.html">ABOUT</a>
   </div>
   <div class="container">
     <div class="row">
