--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
       <a href="index.html">HOME</a>
   </div>
   <div class="regform-container">
-    <form class="form-class" onsubmit="return postToGoogle()" id="form" target="_self" action="/" target="_self" id="mG61Hd" method="POST"
+    <form class="form-class" onsubmit="return postToGoogle()" id="form" target="_self" action="success.html" target="_self" id="mG61Hd" method="POST"
       autocomplete="off">
       <div class="form-group">
         <label for="fname" style="color:white">First Name:</label>
