--- a/success.html
+++ b/success.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>CodeAdept 3.0</title>
   </head>
+    <link rel="icon" href="images/codeadeptprofilelogo.png">
+    <link rel="stylesheet" href="css/styles1.css">
   <body class="bg">
     <div class="container1 pullRight">
     <a href="index.html">HOME</a>
