--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body class="bg">
     <div class="container1 pullRight">
     <a href="index.html">HOME</a>
-    <a href="register.html">REGISTER</a>
+    <a href="Register.html">REGISTER</a>
     <a href="contactus.html">CONTACT US</a>
     <a href="adept.html">ADEPT'18</a>
     <a href="guidelines.html">GUIDELINES</a>
