--- a/register.html
+++ b/register.html
@@ -17,7 +17,10 @@
     <div class=" reg-home container1 pullRight">
       <a href="index.html">HOME</a>
   </div>
-  <div class="regform-container">
+  <div class="logo-div">
+  <img src="images/codeadeptprofilelogo.png" alt="">
+  </div>
+  <div class="regform-container fc">
     <form class="form-class" onsubmit="return postToGoogle()" id="form" target="_self" action="success.html" target="_self" id="mG61Hd" method="POST"
       autocomplete="off">
       <div class="form-group">
@@ -76,6 +79,9 @@
     </form>
     <div id="success-msg">
     </div>
+  </div>
+  <div class="foot1">
+    <p style="color:white; opacity:0.4 ;text-align:center">Developed By Tanishq Soni & Sachin Lodhi</p>
   </div>
   </body>
   <script type="text/javascript">
