--- a/success.html
+++ b/success.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>CodeAdept 3.0</title>
-  </head>
     <link rel="icon" href="images/codeadeptprofilelogo.png">
     <link rel="stylesheet" href="css/styles1.css">
+  </head>
   <body class="bg">
     <div class="container1 pullRight">
     <a href="index.html">HOME</a>
@@ -15,8 +15,11 @@
     <a href="guidelines.html">GUIDELINES</a>
     <a href="About.html">ABOUT</a>
     </div>
-    <div class="">
-      <p>Registration Successfull!!</p>
+    <div class="ss">
+      <p style="color:white">Registration Successfull!!</p>
+    </div>
+    <div class="foot">
+      <p style="color:white; opacity:0.4 ;text-align:center">Developed By Tanishq Soni & Sachin Lodhi</p>
     </div>
   </body>
 </html>
