--- a/register.html
+++ b/register.html
@@ -21,7 +21,7 @@
   <img src="images/codeadeptprofilelogo.png" alt="">
   </div>
   <div class="regform-container fc">
-    <form class="form-class" onsubmit="return postToGoogle()" id="form" target="_self" action="success.html" target="_self" id="mG61Hd" method="POST"
+    <form class="form-class" onsubmit="return postToGoogle()" id="form" target="_self" action=""https://docs.google.com/forms/d/e/1FAIpQLScKOQV96S3wK2S5GaeKiLtQ6Drsx00e4xNvum2Bwe4N2SQQ6g/formResponse?"" target="_self" id="mG61Hd" method="POST"
       autocomplete="off">
       <div class="form-group">
         <label for="fname" style="color:white">First Name:</label>
