--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>CodeAdept 3.0</title>
     <style type="text/css">
-
     </style>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -13,6 +12,9 @@
     <link rel="icon" href="images/codeadeptprofilelogo.png">
     <link rel="stylesheet" href="css/styles1.css">
   </head>
+  <body>
+    <img src=">
+  </body>
   <body class="bg">
     <div class="container1 pullRight">
     <a href="index.html">HOME</a>
