--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
     <link rel="icon" href="images/codeadeptprofilelogo.png">
     <link rel="stylesheet" href="css/styles1.css">
   </head>
-  <body>
-    <img src=">
-  </body>
   <body class="bg">
+    <h1 style="color:white; text-align:center">Department Of Information Technology</h1>
     <div class="container1 pullRight">
     <a href="index.html">HOME</a>
     <a href="register.html">REGISTER</a>
