--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/styles1.css">
   </head>
   <body class="bg">
-    <img src="images/th.JPG"/>
+    <img id="logo" src="images/th.jpg"/>
     <h1 style="color:white; text-align:center; opacity:0.4">Department Of Information Technology</h1>
     <div class="container1 pullRight">
     <a href="index.html">HOME</a>
