--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body class="bg">
     <img id="logo" src="images/th.jpg"/>
-    <h1 style="color:white; text-align:center; opacity:0.4">Department Of Information Technology</h1>
+    <h1 id="head" style="color:white; text-align:center; opacity:0.4">Department Of Information Technology</h1>
     <div class="container1 pullRight">
     <a href="index.html">HOME</a>
     <a href="register.html">REGISTER</a>
