--- a/register.html
+++ b/register.html
@@ -1,167 +1,196 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Register</title>
-    <style type="text/css">
 
-    </style>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <link rel="icon" href="images/codeadeptprofilelogo.png">
-    <link rel="stylesheet" href="css/styles1.css">
-  </head>
-  <body class="bg">
-    <div class=" reg-home container1 pullRight">
-      <a href="index.html">HOME</a>
-  </div>
-  <div class="logo-div">
-  <img src="images/codeadeptprofilelogo.png" alt="">
-  </div>
-  <div class="regform-container fc">
-    <form class="form-class" onsubmit="return postToGoogle()" id="form" target="_self" action=""https://docs.google.com/forms/d/e/1FAIpQLScKOQV96S3wK2S5GaeKiLtQ6Drsx00e4xNvum2Bwe4N2SQQ6g/formResponse?"" target="_self" id="mG61Hd" method="POST"
+<head>
+  <meta charset="utf-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- using google sheets -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <title>Registration form</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+  <!-- Popper JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+  <link rel="stylesheet" href="css/styles1.css">
+</head>
+
+<body class="bg">
+  <div class="regform container">
+    <h1>CodeAdept 3.0 Registration</h1>
+    <form class="form-class" onsubmit="return postToGoogle()" id="form" target="_self" action="https://docs.google.com/forms/d/e/1FAIpQLScKOQV96S3wK2S5GaeKiLtQ6Drsx00e4xNvum2Bwe4N2SQQ6g/formResponse" target="_self" id="mG61Hd" method="POST"
       autocomplete="off">
       <div class="form-group">
-        <label for="fname" style="color:white">First Name:</label>
-        <input type="text" autocomplete="off" name="entry.1829834873" required class="form-control fi " id="fname" aria-describedby="fnameHelp" placeholder="">
+        <label for="fname">First Name</label>
+        <input type="text" autocomplete="off" name="entry.1829834873" required class="form-control" id="fname" aria-describedby="fnameHelp" placeholder="Enter first name">
         <span id="fname-small" class="form-text text-danger font-weight-bold"></span>
       </div>
       <div class="form-group">
-        <label for="lname" style="color:white">Last Name:</label>
-        <input type="text" autocomplete="off" name="entry.1856991437" required class="form-control fi" id="lname" aria-describedby="lnameHelp" placeholder="">
+        <label for="lname">Last Name</label>
+        <input type="text" autocomplete="off" name="entry.1856991437" required class="form-control" id="lname" aria-describedby="lnameHelp" placeholder="Enter last name">
         <span id="lname-small" class="form-text text-danger font-weight-bold"></span>
       </div>
       <div class="form-group">
-        <label for="email" style="color:white">Email address:</label>
-        <input type="email" autocomplete="off" name="entry.951032767" required class="form-control fi" id="email" aria-describedby="emailHelp" placeholder="">
+        <label for="email">Email address</label>
+        <input type="email" autocomplete="off" name="entry.951032767" required class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
         <span id="email-small" class="form-text text-danger"></span>
       </div>
       <div class="form-group">
-        <label for="branch" style="color:white">Branch:</label>
-        <select name="entry.921494148" required class="form-control fi">
-          <option value="Computer Science">Computer Science</option>
-          <option value="Information Technology">Information Technology</option>
-          <option value="Electronics and Communication">Electronics and Communication </option>
-          <option value="Electrical and Electronics">Electrical and Electronics</option>
-          <option value="Mechnical Engineering">Mechnical Engineering</option>
-          <option value="Automobile Engineering">Automobile Engineering</option>
-          <option value="Petrochemical Engineering">Petrochemical Engineering</option>
-          <option value="Civil Engineering">Civil Engineering</option>
-          <option value="MCA">MCA</option>
-        </select>
-        <span id="branch-small" class="form-text text-danger " ></span>
+        <label for="branch">Branch</label>
+        <input type="text" autocomplete="off" name="entry.921494148" required class="form-control" id="branch" aria-describedby="branchHelp" placeholder="Enter branch">
+        <span id="branch-small" class="form-text text-danger"></span>
       </div>
       <div class="form-group">
-        <label for="enrollment" style="color:white">Enrollment number:</label>
-        <input type="text" autocomplete="off" name="entry.451298275" required class="form-control fi" id="enrollment" aria-describedby="enrollmentHelp" placeholder="">
+        <label for="enrollment">Enrollment number</label>
+        <input type="text" autocomplete="off" name="entry.451298275" required class="form-control" id="enrollment" aria-describedby="enrollmentHelp" placeholder="Enter enrollment number">
         <span id="enrollment-small" class="form-text text-danger"></span>
       </div>
       <div class="form-group">
-        <label for="year"class = "pr-2" style="color:white">Year:</label>
-        <select id="year" placeholder="Select Year" class="form-control fi" required name="entry.1446548821">
+        <label for="year"class = "pr-2">Select Year</label>
+
+
+        
+
+        <!-- <div class="form-check-inline">
+          <label class="form-check-label">
+            <input type="radio" class="form-check-input" name="optradio">First Year
+          </label>
+        </div>
+        <div class="form-check-inline">
+          <label class="form-check-label">
+            <input type="radio" class="form-check-input" name="optradio">Second Year
+          </label>
+        </div>
+        <div class="form-check-inline">
+          <label class="form-check-label">
+            <input type="radio" class="form-check-input" name="optradio">Third Year
+          </label>
+        </div>
+        <div class="form-check-inline">
+          <label class="form-check-label">
+            <input type="radio" class="form-check-input" name="optradio">Fourth Year
+          </label>
+        </div> -->
+
+
+
+
+        <select id="year" placeholder="Select Year" class="rounded pl-3 ml-3" required name="entry.1446548821">
           <option value="Year: 1st">First Year</option>
           <option value="Year: 2nd">Second Year</option>
           <option value="Year: 3rd">Third Year</option>
           <option value="Year: 4th">Fourth Year</option>
         </select>
-        <span id="year-small" class="form-text text-danger "></span>
+        <span id="year-small" class="form-text text-danger"></span>
       </div>
       <div class="form-group">
-        <label for="mobile" style="color:white">Mobile Number:</label>
-        <input type="mobile" autocomplete="off" name="entry.1982684794" required class="form-control fi" id="mobile" aria-describedby="mobileHelp" placeholder="">
+        <label for="mobile">Mobile Number</label>
+        <input type="mobile" autocomplete="off" name="entry.1982684794" required class="form-control" id="mobile" aria-describedby="mobileHelp" placeholder="Enter mobile number">
         <span id="mobile-small" class="form-text text-danger"></span>
       </div>
       <div class="form-group">
-        <button class=" btn btn-lg mt-3 btn-outline-primary" type="submit" id="submit" style="color:white">Submit</button>
+        <button class=" btn btn-lg mt-3 btn-outline-primary" type="submit" id="submit">Submit</button>
+        <a class=" btn btn-lg mt-3 btn-outline-primary" href="index.html">Back</a>
       </div>
     </form>
     <div id="success-msg">
+      <h3 style="text-align: center !important; display:none; color:#000"> Your Request has been posted to the database.</h3>
+      <p>You will soon get more information via email.</p>
     </div>
   </div>
-  <div class="foot1">
-    <p style="color:white; opacity:0.4 ;text-align:center">Developed By Tanishq Soni & Sachin Lodhi</p>
-  </div>
-  </body>
-  <script type="text/javascript">
-    function postToGoogle() {
-      var fname = $("#fname").val();
-      var lname = $("#lname").val();
-      var email = $("#email").val();
-      var branch = $("#branch").val();
-      var enrollment = $("#enrollment").val();
-      var year = $("#year option:selected").text();
-      var mobile = $("#mobile").val();
+</body>
+<script type="text/javascript">
+  function postToGoogle() {
+    var fname = $("#fname").val();
+    var lname = $("#lname").val();
+    var email = $("#email").val();
+    var branch = $("#branch").val();
+    var enrollment = $("#enrollment").val();
+    var year = $("#year option:selected").text();
+    var mobile = $("#mobile").val();
 
-      if (fname.length < 3) {
-        document.getElementById('fname-small').innerHTML = "**Please enter valid first name(length > 2)";
-        document.getElementById('fname').focus();
-        return false;
-      }
-      if (/\d/.test(fname)) {
-        document.getElementById('fname-small').innerHTML = "**Please do not enter numbers in First Name";
-        document.getElementById('fname').focus();
-        return false;
-      }
-
-
-      if (lname.length < 3) {
-        document.getElementById('lname-small').innerHTML = "**Please enter valid last name(length > 2)";
-        document.getElementById('lname').focus();
-        return false;
-      }
-      if (/\d/.test(lname)) {
-        document.getElementById('lname-small').innerHTML = "**Please do not enter numbers in Last Name";
-        document.getElementById('lname').focus();
-        return false;
-      }
-
-
-      if (email.indexOf('@') == 0) {
-        document.getElementById('email-small').innerHTML = "**Please enter valid email";
-        document.getElementById('email').focus();
-        return false;
-      }
-      if (!(email.charAt(email.length - 4) == '.' || email.charAt(email.length - 3) == '.')) {
-        document.getElementById('email-small').innerHTML = "**Please write a valid Email";
-        document.getElementById('email').focus();
-        return false;
-      }
-
-
-      if (enrollment.length < 12) {
-        document.getElementById('enrollment-small').innerHTML = "**Please enter valid enrollment";
-        return false;
-      }
-
-      if (!(/^\d{10}$/.test(mobile))) {
-        document.getElementById('mobile-small').innerHTML = "**Please enter valid mobile number.";
-        return false;
-      }
-
-      $.ajax({
-        url: "https://docs.google.com/forms/d/e/1FAIpQLScKOQV96S3wK2S5GaeKiLtQ6Drsx00e4xNvum2Bwe4N2SQQ6g/formResponse?",
-        data: {
-          "entry.1829834873": fname,
-          "entry.1856991437": lname,
-          "entry.951032767": email,
-          "entry.921494148": branch,
-          "entry.451298275": enrollment,
-          "entry.1446548821": year,
-          "entry.1982684794": mobile
-        },
-        type: "POST",
-        dataType: "xml",
-        success: function(d) {},
-        error: function(x, y, z) {
-
-          $('#success-msg').show();
-          $('#form').hide();
-
-        }
-  });
+    if (fname.length < 3) {
+      document.getElementById('fname-small').innerHTML = "**Please enter valid first name(length > 2)";
+      document.getElementById('fname').focus();
       return false;
     }
-    </script>
+    if (/\d/.test(fname)) {
+      document.getElementById('fname-small').innerHTML = "**Please do not enter numbers in First Name";
+      document.getElementById('fname').focus();
+      return false;
+    }
+
+
+    if (lname.length < 3) {
+      document.getElementById('lname-small').innerHTML = "**Please enter valid last name(length > 2)";
+      document.getElementById('lname').focus();
+      return false;
+    }
+    if (/\d/.test(lname)) {
+      document.getElementById('lname-small').innerHTML = "**Please do not enter numbers in Last Name";
+      document.getElementById('lname').focus();
+      return false;
+    }
+
+
+    if (email.indexOf('@') == 0) {
+      document.getElementById('email-small').innerHTML = "**Please enter valid email";
+      document.getElementById('email').focus();
+      return false;
+    }
+    if (!(email.charAt(email.length - 4) == '.' || email.charAt(email.length - 3) == '.')) {
+      document.getElementById('email-small').innerHTML = "**Please write a valid Email";
+      document.getElementById('email').focus();
+      return false;
+    }
+
+
+    if (enrollment.length < 12) {
+      document.getElementById('enrollment-small').innerHTML = "**Please enter valid enrollment";
+      return false;
+    }
+
+    if (!(/^\d{10}$/.test(mobile))) {
+      document.getElementById('mobile-small').innerHTML = "**Please enter valid mobile number.";
+      return false;
+    }
+
+
+
+
+    $.ajax({
+      url: "https://docs.google.com/forms/d/e/1FAIpQLScKOQV96S3wK2S5GaeKiLtQ6Drsx00e4xNvum2Bwe4N2SQQ6g/formResponse?",
+      data: {
+        "entry.1829834873": fname,
+        "entry.1856991437": lname,
+        "entry.951032767": email,
+        "entry.921494148": branch,
+        "entry.451298275": enrollment,
+        "entry.1446548821": year,
+        "entry.1982684794": mobile
+      },
+      type: "POST",
+      dataType: "xml",
+      success: function(d) {},
+      error: function(x, y, z) {
+
+        $('#success-msg').show();
+        $('#form').hide();
+
+      }
+    });
+    return false;
+  }
+</script>
+
 </html>
