--- a/register.html
+++ b/register.html
@@ -27,36 +27,36 @@
 
 <body class="bg">
   <div class="regform container">
-    <h1>CodeAdept 3.0 Registration</h1>
+    <h1 style="color:white">Registration</h1>
     <form class="form-class" onsubmit="return postToGoogle()" id="form" target="_self" action="https://docs.google.com/forms/d/e/1FAIpQLScKOQV96S3wK2S5GaeKiLtQ6Drsx00e4xNvum2Bwe4N2SQQ6g/formResponse" target="_self" id="mG61Hd" method="POST"
       autocomplete="off">
       <div class="form-group">
-        <label for="fname">First Name</label>
+        <label for="fname" style="color:white">First Name</label>
         <input type="text" autocomplete="off" name="entry.1829834873" required class="form-control" id="fname" aria-describedby="fnameHelp" placeholder="Enter first name">
         <span id="fname-small" class="form-text text-danger font-weight-bold"></span>
       </div>
       <div class="form-group">
-        <label for="lname">Last Name</label>
+        <label for="lname" style="color:white">Last Name</label>
         <input type="text" autocomplete="off" name="entry.1856991437" required class="form-control" id="lname" aria-describedby="lnameHelp" placeholder="Enter last name">
         <span id="lname-small" class="form-text text-danger font-weight-bold"></span>
       </div>
       <div class="form-group">
-        <label for="email">Email address</label>
+        <label for="email" style="color:white">Email address</label>
         <input type="email" autocomplete="off" name="entry.951032767" required class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
         <span id="email-small" class="form-text text-danger"></span>
       </div>
       <div class="form-group">
-        <label for="branch">Branch</label>
+        <label for="branch" style="color:white">Branch</label>
         <input type="text" autocomplete="off" name="entry.921494148" required class="form-control" id="branch" aria-describedby="branchHelp" placeholder="Enter branch">
         <span id="branch-small" class="form-text text-danger"></span>
       </div>
       <div class="form-group">
-        <label for="enrollment">Enrollment number</label>
+        <label for="enrollment" style="color:white">Enrollment number</label>
         <input type="text" autocomplete="off" name="entry.451298275" required class="form-control" id="enrollment" aria-describedby="enrollmentHelp" placeholder="Enter enrollment number">
         <span id="enrollment-small" class="form-text text-danger"></span>
       </div>
       <div class="form-group">
-        <label for="year"class = "pr-2">Select Year</label>
+        <label for="year"class = "pr-2"style="color:white">Year</label>
 
 
         
@@ -85,7 +85,7 @@
 
 
 
-        <select id="year" placeholder="Select Year" class="rounded pl-3 ml-3" required name="entry.1446548821">
+        <select id="year" placeholder="Year" class="rounded pl-3 ml-3" required name="entry.1446548821">
           <option value="Year: 1st">First Year</option>
           <option value="Year: 2nd">Second Year</option>
           <option value="Year: 3rd">Third Year</option>
@@ -94,13 +94,13 @@
         <span id="year-small" class="form-text text-danger"></span>
       </div>
       <div class="form-group">
-        <label for="mobile">Mobile Number</label>
+        <label for="mobile" style="color:white">Mobile Number</label>
         <input type="mobile" autocomplete="off" name="entry.1982684794" required class="form-control" id="mobile" aria-describedby="mobileHelp" placeholder="Enter mobile number">
         <span id="mobile-small" class="form-text text-danger"></span>
       </div>
       <div class="form-group">
-        <button class=" btn btn-lg mt-3 btn-outline-primary" type="submit" id="submit">Submit</button>
-        <a class=" btn btn-lg mt-3 btn-outline-primary" href="index.html">Back</a>
+        <button class=" btn btn-lg mt-3 btn-outline-primary" type="submit" id="submit" style="color:white">Submit</button>
+        <a class=" btn btn-lg mt-3 btn-outline-primary" href="index.html" style="color:white">Back</a>
       </div>
     </form>
     <div id="success-msg">
